[feat]: Add responsiveness to attirbute dots
This commit includes:
- [Attributes] physical/social/mental goes from 1 column to 3 columns on small and large screens
- dot groups for each subsection (e.g. physical/social/mental) are arranged vertically on large screens
- removed unnecessary <div> element in [Abilities] section. it now matches [Attributes]

--- a/src/v20.html
+++ b/src/v20.html
@@ -165,12 +165,12 @@
     <section>
 
       <h2>attributes</h2>
-      <div class="grid gap-9">
+      <div class="grid gap-9 lg:grid-cols-3">
         <div>
           <!-- Physical -->
           <h4>physical</h4>
           <!-- Strength, Dexterity, Stamina -->
-          <div class="grid gap-5 sm:grid-cols-3">
+          <div class="attribute-wrapper">
             <div class="attribute">
               <span>strength</span>
               <div class="dot-group">
@@ -207,7 +207,7 @@
           <!-- Social -->
           <h4>social</h4>
           <!-- Charisma, Manipulation, Appearance -->
-          <div class="grid gap-5 sm:grid-cols-3">
+          <div class="attribute-wrapper">
             <div class="attribute">
               <span>charisma</span>
               <div class="dot-group">
@@ -244,7 +244,7 @@
           <!-- Mental -->
           <h4>mental</h4>
           <!-- Perception, Intelligence, Wits -->
-          <div class="grid gap-5 sm:grid-cols-3">
+          <div class="attribute-wrapper">
             <div class="attribute">
               <span>perception</span>
               <div class="dot-group">
@@ -285,12 +285,12 @@
     <section>
 
       <h2>abilities</h2>
-      <div class="grid gap-9">
-        <div>
+      <div class="grid gap-9 lg:grid-cols-3">
+                <div>
           <!-- Talents -->
           <h4>talents</h4>
           <!-- Alertness, Athletics, etc. -->
-          <div class="grid gap-5 sm:grid-cols-3">
+          <div class="attribute-wrapper">
             <div class="attribute">
               <span>alertness</span>
               <div class="dot-group">
@@ -408,7 +408,7 @@
           <!-- Skills -->
           <h4>skills</h4>
           <!-- Animal Ken, Crafts, etc. -->
-          <div class="grid gap-5 sm:grid-cols-3">
+          <div class="attribute-wrapper">
             <div class="attribute">
               <span>animal ken</span>
               <div class="dot-group">
@@ -525,7 +525,7 @@
           <!-- Knowledges -->
           <h4>knowledges</h4>
           <!-- Academics, Computer, etc. -->
-           <div class="grid gap-5 sm:grid-cols-3">
+           <div class="attribute-wrapper">
             <div class="attribute">
               <span>academics</span>
               <div class="dot-group">
