[refactor]: Change 'attribute' class names for 'dot'-adjacent names
This commit includes:
- changing the following classes which contained 'attribute'
 - .attribute -> .dots
 - .attribute-wrapper -> .dots-wrapper
 - .attribute-custom -> .textfield-custom (reusable for disciplines)
  - this is to eliminate confusion about the section 'Attributes' and the elements containing dots named the same thing
- renamed the those classes accordingly

--- a/src/v20.html
+++ b/src/v20.html
@@ -15,7 +15,7 @@
 # - The character sheet for V20
 #   > Basics (Player, Chronicle, Name, Concept, Nature, Demeanor)
 #   > Clan (Clan/Bloodline, Sire, Generation)
-#   > Attributes (Physical, Social, Mental)
+#   > dotss (Physical, Social, Mental)
 #   > Abilities (Talents, Skills, Knowledges)
 #   > Disciplines
 #   > Backgrounds
@@ -161,17 +161,17 @@
 
     </section>
 
-    <!-- [Attributes] -->
+    <!-- [dotss] -->
     <section>
 
-      <h2>attributes</h2>
+      <h2>dotss</h2>
       <div class="grid gap-9 lg:grid-cols-3">
         <div>
           <!-- Physical -->
           <h4>physical</h4>
           <!-- Strength, Dexterity, Stamina -->
-          <div class="attribute-wrapper">
-            <div class="attribute">
+          <div class="dots-wrapper">
+            <div class="dots">
               <span>strength</span>
               <div class="dot-group">
                 <span class="dot"></span>
@@ -181,7 +181,7 @@
                 <span class="dot"></span>
               </div>
             </div>
-            <div class="attribute">
+            <div class="dots">
               <span>dexerity</span>
               <div class="dot-group">
                 <span class="dot"></span>
@@ -191,7 +191,7 @@
                 <span class="dot"></span>
               </div>
             </div>
-            <div class="attribute">
+            <div class="dots">
               <span>stamina</span>
               <div class="dot-group">
                 <span class="dot"></span>
@@ -207,8 +207,8 @@
           <!-- Social -->
           <h4>social</h4>
           <!-- Charisma, Manipulation, Appearance -->
-          <div class="attribute-wrapper">
-            <div class="attribute">
+          <div class="dots-wrapper">
+            <div class="dots">
               <span>charisma</span>
               <div class="dot-group">
                 <span class="dot"></span>
@@ -218,7 +218,7 @@
                 <span class="dot"></span>
               </div>
             </div>
-            <div class="attribute">
+            <div class="dots">
               <span>manipulation</span>
               <div class="dot-group">
                 <span class="dot"></span>
@@ -228,7 +228,7 @@
                 <span class="dot"></span>
               </div>
             </div>
-            <div class="attribute">
+            <div class="dots">
               <span>appearance</span>
               <div class="dot-group">
                 <span class="dot"></span>
@@ -244,8 +244,8 @@
           <!-- Mental -->
           <h4>mental</h4>
           <!-- Perception, Intelligence, Wits -->
-          <div class="attribute-wrapper">
-            <div class="attribute">
+          <div class="dots-wrapper">
+            <div class="dots">
               <span>perception</span>
               <div class="dot-group">
                 <span class="dot"></span>
@@ -255,7 +255,7 @@
                 <span class="dot"></span>
               </div>
             </div>
-            <div class="attribute">
+            <div class="dots">
               <span>intelligence</span>
               <div class="dot-group">
                 <span class="dot"></span>
@@ -265,7 +265,7 @@
                 <span class="dot"></span>
               </div>
             </div>
-            <div class="attribute">
+            <div class="dots">
               <span>wits</span>
               <div class="dot-group">
                 <span class="dot"></span>
@@ -286,12 +286,12 @@
 
       <h2>abilities</h2>
       <div class="grid gap-9 lg:grid-cols-3">
-                <div>
+        <div>
           <!-- Talents -->
           <h4>talents</h4>
           <!-- Alertness, Athletics, etc. -->
-          <div class="attribute-wrapper">
-            <div class="attribute">
+          <div class="dots-wrapper">
+            <div class="dots">
               <span>alertness</span>
               <div class="dot-group">
                 <span class="dot"></span>
@@ -301,7 +301,7 @@
                 <span class="dot"></span>
               </div>
             </div>
-            <div class="attribute">
+            <div class="dots">
               <span>athletics</span>
               <div class="dot-group">
                 <span class="dot"></span>
@@ -311,7 +311,7 @@
                 <span class="dot"></span>
               </div>
             </div>
-            <div class="attribute">
+            <div class="dots">
               <span>awareness</span>
               <div class="dot-group">
                 <span class="dot"></span>
@@ -321,7 +321,7 @@
                 <span class="dot"></span>
               </div>
             </div>
-            <div class="attribute">
+            <div class="dots">
               <span>brawl</span>
               <div class="dot-group">
                 <span class="dot"></span>
@@ -331,7 +331,7 @@
                 <span class="dot"></span>
               </div>
             </div>
-            <div class="attribute">
+            <div class="dots">
               <span>empathy</span>
               <div class="dot-group">
                 <span class="dot"></span>
@@ -341,7 +341,7 @@
                 <span class="dot"></span>
               </div>
             </div>
-            <div class="attribute">
+            <div class="dots">
               <span>expression</span>
               <div class="dot-group">
                 <span class="dot"></span>
@@ -351,7 +351,7 @@
                 <span class="dot"></span>
               </div>
             </div>
-            <div class="attribute">
+            <div class="dots">
               <span>intimidation</span>
               <div class="dot-group">
                 <span class="dot"></span>
@@ -361,7 +361,7 @@
                 <span class="dot"></span>
               </div>
             </div>
-            <div class="attribute">
+            <div class="dots">
               <span>leadership</span>
               <div class="dot-group">
                 <span class="dot"></span>
@@ -371,7 +371,7 @@
                 <span class="dot"></span>
               </div>
             </div>
-            <div class="attribute">
+            <div class="dots">
               <span>streetwise</span>
               <div class="dot-group">
                 <span class="dot"></span>
@@ -381,7 +381,7 @@
                 <span class="dot"></span>
               </div>
             </div>
-            <div class="attribute">
+            <div class="dots">
               <span>subterfuge</span>
               <div class="dot-group">
                 <span class="dot"></span>
@@ -391,8 +391,8 @@
                 <span class="dot"></span>
               </div>
             </div>
-            <div class="attribute">
-              <input type="text" name="sire" placeholder="custom talent" class="attribute-custom">
+            <div class="dots">
+              <input type="text" name="sire" placeholder="custom talent" class="textfield-custom">
               <div class="dot-group">
                 <span class="dot"></span>
                 <span class="dot"></span>
@@ -408,8 +408,8 @@
           <!-- Skills -->
           <h4>skills</h4>
           <!-- Animal Ken, Crafts, etc. -->
-          <div class="attribute-wrapper">
-            <div class="attribute">
+          <div class="dots-wrapper">
+            <div class="dots">
               <span>animal ken</span>
               <div class="dot-group">
                 <span class="dot"></span>
@@ -419,7 +419,7 @@
                 <span class="dot"></span>
               </div>
             </div>
-            <div class="attribute">
+            <div class="dots">
               <span>crafts</span>
               <div class="dot-group">
                 <span class="dot"></span>
@@ -429,7 +429,7 @@
                 <span class="dot"></span>
               </div>
             </div>
-            <div class="attribute">
+            <div class="dots">
               <span>drive</span>
               <div class="dot-group">
                 <span class="dot"></span>
@@ -439,7 +439,7 @@
                 <span class="dot"></span>
               </div>
             </div>
-            <div class="attribute">
+            <div class="dots">
               <span>etiquette</span>
               <div class="dot-group">
                 <span class="dot"></span>
@@ -449,7 +449,7 @@
                 <span class="dot"></span>
               </div>
             </div>
-            <div class="attribute">
+            <div class="dots">
               <span>firearms</span>
               <div class="dot-group">
                 <span class="dot"></span>
@@ -459,7 +459,7 @@
                 <span class="dot"></span>
               </div>
             </div>
-            <div class="attribute">
+            <div class="dots">
               <span>larceny</span>
               <div class="dot-group">
                 <span class="dot"></span>
@@ -469,7 +469,7 @@
                 <span class="dot"></span>
               </div>
             </div>
-            <div class="attribute">
+            <div class="dots">
               <span>melee</span>
               <div class="dot-group">
                 <span class="dot"></span>
@@ -479,7 +479,7 @@
                 <span class="dot"></span>
               </div>
             </div>
-            <div class="attribute">
+            <div class="dots">
               <span>performance</span>
               <div class="dot-group">
                 <span class="dot"></span>
@@ -489,7 +489,7 @@
                 <span class="dot"></span>
               </div>
             </div>
-            <div class="attribute">
+            <div class="dots">
               <span>stealth</span>
               <div class="dot-group">
                 <span class="dot"></span>
@@ -499,7 +499,7 @@
                 <span class="dot"></span>
               </div>
             </div>
-            <div class="attribute">
+            <div class="dots">
               <span>survival</span>
               <div class="dot-group">
                 <span class="dot"></span>
@@ -509,8 +509,8 @@
                 <span class="dot"></span>
               </div>
             </div>
-            <div class="attribute">
-              <input type="text" name="sire" placeholder="custom skill" class="attribute-custom">
+            <div class="dots">
+              <input type="text" name="sire" placeholder="custom skill" class="textfield-custom">
               <div class="dot-group">
                 <span class="dot"></span>
                 <span class="dot"></span>
@@ -525,8 +525,8 @@
           <!-- Knowledges -->
           <h4>knowledges</h4>
           <!-- Academics, Computer, etc. -->
-           <div class="attribute-wrapper">
-            <div class="attribute">
+           <div class="dots-wrapper">
+            <div class="dots">
               <span>academics</span>
               <div class="dot-group">
                 <span class="dot"></span>
@@ -536,7 +536,7 @@
                 <span class="dot"></span>
               </div>
             </div>
-            <div class="attribute">
+            <div class="dots">
               <span>computer</span>
               <div class="dot-group">
                 <span class="dot"></span>
@@ -546,7 +546,7 @@
                 <span class="dot"></span>
               </div>
             </div>
-            <div class="attribute">
+            <div class="dots">
               <span>finance</span>
               <div class="dot-group">
                 <span class="dot"></span>
@@ -556,7 +556,7 @@
                 <span class="dot"></span>
               </div>
             </div>
-            <div class="attribute">
+            <div class="dots">
               <span>investigation</span>
               <div class="dot-group">
                 <span class="dot"></span>
@@ -566,7 +566,7 @@
                 <span class="dot"></span>
               </div>
             </div>
-            <div class="attribute">
+            <div class="dots">
               <span>law</span>
               <div class="dot-group">
                 <span class="dot"></span>
@@ -576,7 +576,7 @@
                 <span class="dot"></span>
               </div>
             </div>
-            <div class="attribute">
+            <div class="dots">
               <span>medicine</span>
               <div class="dot-group">
                 <span class="dot"></span>
@@ -586,7 +586,7 @@
                 <span class="dot"></span>
               </div>
             </div>
-            <div class="attribute">
+            <div class="dots">
               <span>occult</span>
               <div class="dot-group">
                 <span class="dot"></span>
@@ -596,7 +596,7 @@
                 <span class="dot"></span>
               </div>
             </div>
-            <div class="attribute">
+            <div class="dots">
               <span>politics</span>
               <div class="dot-group">
                 <span class="dot"></span>
@@ -606,7 +606,7 @@
                 <span class="dot"></span>
               </div>
             </div>
-            <div class="attribute">
+            <div class="dots">
               <span>science</span>
               <div class="dot-group">
                 <span class="dot"></span>
@@ -616,7 +616,7 @@
                 <span class="dot"></span>
               </div>
             </div>
-            <div class="attribute">
+            <div class="dots">
               <span>technology</span>
               <div class="dot-group">
                 <span class="dot"></span>
@@ -626,8 +626,8 @@
                 <span class="dot"></span>
               </div>
             </div>
-            <div class="attribute">
-              <input type="text" name="sire" placeholder="custom knowledges" class="attribute-custom">
+            <div class="dots">
+              <input type="text" name="sire" placeholder="custom knowledges" class="textfield-custom">
               <div class="dot-group">
                 <span class="dot"></span>
                 <span class="dot"></span>
