[fix]: Change dots layout from grid-cols-3 in lg to sm
This commit includes:
- making all elements including dots to a 3-column layout as soon as it hits small screen size, instead of large.
  - this is so that the 'Abilities' section does not look awkward and fat.
- last commit accidentally changed 'Attributes' heading to 'dotss'. it's back to normal 'Attributes'

--- a/src/v20.html
+++ b/src/v20.html
@@ -161,11 +161,11 @@
 
     </section>
 
-    <!-- [dotss] -->
+    <!-- [Attributes] -->
     <section>
 
-      <h2>dotss</h2>
-      <div class="grid gap-9 lg:grid-cols-3">
+      <h2>attributes</h2>
+      <div class="grid gap-9 sm:grid-cols-3">
         <div>
           <!-- Physical -->
           <h4>physical</h4>
@@ -285,7 +285,7 @@
     <section>
 
       <h2>abilities</h2>
-      <div class="grid gap-9 lg:grid-cols-3">
+      <div class="grid gap-9 sm:grid-cols-3">
         <div>
           <!-- Talents -->
           <h4>talents</h4>
