--- a/src/v20.html
+++ b/src/v20.html
@@ -392,7 +392,7 @@
               </div>
             </div>
             <div class="dots">
-              <input type="text" name="sire" placeholder="custom talent" class="textfield-custom">
+              <input type="text" name="custom_talent" placeholder="custom talent" class="textfield-custom">
               <div class="dot-group">
                 <span class="dot"></span>
                 <span class="dot"></span>
@@ -510,7 +510,7 @@
               </div>
             </div>
             <div class="dots">
-              <input type="text" name="sire" placeholder="custom skill" class="textfield-custom">
+              <input type="text" name="custom_skill" placeholder="custom skill" class="textfield-custom">
               <div class="dot-group">
                 <span class="dot"></span>
                 <span class="dot"></span>
@@ -627,7 +627,7 @@
               </div>
             </div>
             <div class="dots">
-              <input type="text" name="sire" placeholder="custom knowledges" class="textfield-custom">
+              <input type="text" name="custom_knowledge" placeholder="custom knowledge" class="textfield-custom">
               <div class="dot-group">
                 <span class="dot"></span>
                 <span class="dot"></span>
@@ -643,7 +643,7 @@
     </section>
 
     <!-- [Disciplines + Backgrounds] -->
-    <section class="">
+    <section class="flex flex-col justify-center gap-9 sm:grid sm:grid-cols-2">
       <!--
       
       2 columns: Disciplines (right), Backgrounds (left)
@@ -657,8 +657,35 @@
         = filled in forms; dropdown for Caitiff
 
         -->
+        <div class="flex flex-col gap-3">
 
+          <!-- Discipline dropdowns -->
+          <label>
+            <select name="discipline" class="dropdown text-textPrimary w-full">
+              <!-- Discipline options will be added here -->
+            </select>
+          </label>
+          <label>
+            <select name="discipline" class="dropdown text-textPrimary w-full">
+              <!-- Discipline options will be added here -->
+            </select>
+          </label>
+          <label>
+            <select name="discipline" class="dropdown text-textPrimary w-full">
+              <!-- Discipline options will be added here -->
+            </select>
+          </label>
+
+          <!-- Button to add discipline -->
+          <div class="flex flex-col text-center font-body text-textPrimary space-y-2 lg:text-lg">
+            <a href="" class="btn group text-xs">
+              add new <span class="span">discipline</span>
+            </a>
+          </div>
+
+        </div>
       </div>
+
       <div>
         <h3>backgrounds</h3>
         <!-- 
@@ -667,6 +694,34 @@
         = Textfields
         
         -->
+        <div class="flex flex-col gap-3">
+
+          <!-- Discipline dropdowns -->
+          <label>
+            <select name="background" class="dropdown text-textPrimary w-full">
+              <!-- Discipline options will be added here -->
+            </select>
+          </label>
+          <label>
+            <select name="background" class="dropdown text-textPrimary w-full">
+              <!-- Discipline options will be added here -->
+            </select>
+          </label>
+          <label>
+            <select name="background" class="dropdown text-textPrimary w-full">
+              <!-- Discipline options will be added here -->
+            </select>
+          </label>
+
+          <!-- Button to add discipline -->
+          <div class="flex flex-col text-center font-body text-textPrimary space-y-2 lg:text-lg">
+            <a href="#" class="btn group text-xs">
+              add new <span class="span">background</span>
+            </a>
+          </div>
+
+        </div>
+
       </div>
 
     </section>
