[fix/feature]: Add dots to [Disciplines]/[Backgrounds]
This commit includes:
- the dots for [Disciplines] and [Backgrounds] i forgot.
- tweaked the 'add new [x]' buttons
- started on [Virtues]; added dots

--- a/src/v20.html
+++ b/src/v20.html
@@ -660,24 +660,51 @@
         <div class="flex flex-col gap-3">
 
           <!-- Discipline dropdowns -->
-          <label>
-            <select name="discipline" class="dropdown text-textPrimary w-full">
-              <!-- Discipline options will be added here -->
-            </select>
-          </label>
-          <label>
-            <select name="discipline" class="dropdown text-textPrimary w-full">
-              <!-- Discipline options will be added here -->
-            </select>
-          </label>
-          <label>
-            <select name="discipline" class="dropdown text-textPrimary w-full">
-              <!-- Discipline options will be added here -->
-            </select>
-          </label>
+          <div class="dots-wrapper">
+            <div class="dots">
+              <select name="discipline" class="dropdown text-textPrimary w-full">
+                <!-- Discipline options will be added here -->
+              </select>
+              <div class="dot-group">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+              </div>
+            </div>
+          </div>
+          <div class="dots-wrapper">
+            <div class="dots">
+              <select name="discipline" class="dropdown text-textPrimary w-full">
+                <!-- Discipline options will be added here -->
+              </select>
+              <div class="dot-group">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+              </div>
+            </div>
+          </div>
+          <div class="dots-wrapper">
+            <div class="dots">
+              <select name="discipline" class="dropdown text-textPrimary w-full">
+                <!-- Discipline options will be added here -->
+              </select>
+              <div class="dot-group">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+              </div>
+            </div>
+          </div>
 
           <!-- Button to add discipline -->
-          <div class="flex flex-col text-center font-body text-textPrimary space-y-2 lg:text-lg">
+          <div>
             <a href="" class="btn group text-xs">
               add new <span class="span">discipline</span>
             </a>
@@ -696,26 +723,53 @@
         -->
         <div class="flex flex-col gap-3">
 
-          <!-- Discipline dropdowns -->
-          <label>
-            <select name="background" class="dropdown text-textPrimary w-full">
-              <!-- Discipline options will be added here -->
-            </select>
-          </label>
-          <label>
-            <select name="background" class="dropdown text-textPrimary w-full">
-              <!-- Discipline options will be added here -->
-            </select>
-          </label>
-          <label>
-            <select name="background" class="dropdown text-textPrimary w-full">
-              <!-- Discipline options will be added here -->
-            </select>
-          </label>
+          <!-- Backgrounds dropdowns -->
+          <div class="dots-wrapper">
+            <div class="dots">
+              <select name="background" class="dropdown text-textPrimary w-full">
+                <!-- Backgrounds options will be added here -->
+              </select>
+              <div class="dot-group">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+              </div>
+            </div>
+          </div>
+          <div class="dots-wrapper">
+            <div class="dots">
+              <select name="background" class="dropdown text-textPrimary w-full">
+                <!-- Backgrounds options will be added here -->
+              </select>
+              <div class="dot-group">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+              </div>
+            </div>
+          </div>
+          <div class="dots-wrapper">
+            <div class="dots">
+              <select name="background" class="dropdown text-textPrimary w-full">
+                <!-- Background options will be added here -->
+              </select>
+              <div class="dot-group">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+              </div>
+            </div>
+          </div>
 
-          <!-- Button to add discipline -->
-          <div class="flex flex-col text-center font-body text-textPrimary space-y-2 lg:text-lg">
-            <a href="#" class="btn group text-xs">
+          <!-- Button to add background -->
+          <div>
+            <a href="" class="btn group text-xs">
               add new <span class="span">background</span>
             </a>
           </div>
@@ -736,10 +790,44 @@
       <div>
         <h3>virtues</h3>
         <!-- Conscience, Self-Control, Courage -->
+        <div class="dots-wrapper">
+            <div class="dots">
+              <span>conscience/conviction</span>
+              <div class="dot-group">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+              </div>
+            </div>
+            <div class="dots">
+              <span>self-control/instinct</span>
+              <div class="dot-group">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+              </div>
+            </div>
+            <div class="dots">
+              <span>courage</span>
+              <div class="dot-group">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+              </div>
+            </div>
+          </div>
       </div>
 
       <!-- [Humanity/Path & Willpower] -->
-
+      <div>
+        
+      </div>
 
     </section>
 
